--- a/cmain.tex
+++ b/cmain.tex
@@ -16,7 +16,7 @@ First, let's cover some terminology that we'll be using throughout the docs:
 
 A \emph{semantic action} is an arbitrary bit of logic associated with a parser, that is only executed when the parser matches.
 
-Simpler parsers can be combined to form more complex parsers. Given some combining operation \texttt{C}, and parsers \texttt{P0}, \texttt{P1}, ... \texttt{PN}, \texttt{C(P0,\ P1,\ ...\ PN)} creates a new parser \texttt{Q}. This creates a \emph{parse tree}. \texttt{Q} is the parent of \texttt{P1}, \texttt{P2} is the child of \texttt{Q}, etc. The parsers are applied in the top-down fashion implied by this topology. When you use \texttt{Q} to parse a string, it will use \texttt{P0}, \texttt{P1}, etc. to do the actual work. If \texttt{P3} is being used to parse the input, that means that \texttt{Q} is as well, since the way \texttt{Q} parses is by dispatching to its children to do some or all of the work. At any point in the parse, there will be exactly one parser without children that is being used to parse the input; all other parsers being used are its ancestors in the parse tree.
+Simpler parsers can be combined to form more complex parsers. Given some combining operation \texttt{C}, and parsers \texttt{P0}, \texttt{P1}, ... \texttt{PN}, \ci{C(P0,\ P1,\ ...\ PN)} creates a new parser \texttt{Q}. This creates a \emph{parse tree}. \texttt{Q} is the parent of \texttt{P1}, \texttt{P2} is the child of \texttt{Q}, etc. The parsers are applied in the top-down fashion implied by this topology. When you use \texttt{Q} to parse a string, it will use \texttt{P0}, \texttt{P1}, etc. to do the actual work. If \texttt{P3} is being used to parse the input, that means that \texttt{Q} is as well, since the way \texttt{Q} parses is by dispatching to its children to do some or all of the work. At any point in the parse, there will be exactly one parser without children that is being used to parse the input; all other parsers being used are its ancestors in the parse tree.
 
 A \emph{subparser} is a parser that is the child of another parser.
 
