fixed \cii, add breaklines

--- a/cmain.tex
+++ b/cmain.tex
@@ -36,9 +36,9 @@ One is a \emph{sequence parser}; you will see it created using \texttt{operator>
 
 Another is an \emph{alternative parser}; you will see it created using \texttt{operator\textbar{}}, as in \texttt{p1\ \textbar{}\ p2\ \textbar{}\ p3}. An alternative parser tries to match all of its subparsers to the input, one at a time, in order; it stops after matching at most one subparser. It matches the input iff one of its subparsers does.
 
-Finally, there is a \emph{permutation parser}; it is created using \texttt{operator\textbar{}\textbar{}}, as in \texttt{p1\ \textbar{}\textbar{}\ p2\ \textbar{}\textbar{}\ p3}. A permutation parser tries to match all of its subparsers to the input, in any order. So the parser \texttt{p1\ \textbar{}\textbar{}\ p2\ \textbar{}\textbar{}\ p3} is equivalent to \texttt{(p1\ >>\ p2\ >>\ p3)\ \textbar{}\ (p1\ >>\ p3\ >>\ p2)\ \textbar{}\ (p2\ >>\ p1\ >>\ p3)\ \textbar{}\ (p2\ >>\ p3\ >>\ p1)\ \textbar{}\ (p3\ >>\ p1\ >>\ p2)\ \textbar{}\ (p3\ >>\ p2\ >>\ p1)}. Hopefully its terseness is self-explanatory. It matches the input iff all of its subparsers do, regardless of the order they match in.
+Finally, there is a \emph{permutation parser}; it is created using \texttt{operator\textbar{}\textbar{}}, as in \texttt{p1\ \textbar{}\textbar{}\ p2\ \textbar{}\textbar{}\ p3}. A permutation parser tries to match all of its subparsers to the input, in any order. So the parser \ci{p1\ \textbar{}\textbar{}\ p2\ \textbar{}\textbar{}\ p3} is equivalent to \cii{(p1 >> p2 >> p3) | (p1 >> p3 >> p2) | (p2 >> p1 >>\ p3) | (p2 >> p3 >> p1) | (p3 >> p1 >> p2) | (p3\ >> p2 >> p1)}. Hopefully its terseness is self-explanatory. It matches the input iff all of its subparsers do, regardless of the order they match in.
 
-Boost.Parser parsers each have an \emph{attribute} associated with them, or explicitly have no attribute. An attribute is a value that the parser generates when it matches the input. For instance, the parser \texttt{double\_} generates a \texttt{double} when it matches the input. \emph{\texttt{ATTR}}\texttt{()} is a notional macro that expands to the attribute type of the parser passed to it; \emph{\texttt{ATTR}}\texttt{(double\_)} is \texttt{double}. This is similar to the \texttt{attribute} type trait.
+Boost.Parser parsers each have an \emph{attribute} associated with them, or explicitly have no attribute. An attribute is a value that the parser generates when it matches the input. For instance, the parser \texttt{double\_} generates a \texttt{double} when it matches the input. \emph{\texttt{ATTR}}\texttt{()} is a notional macro that expands to the attribute type of the parser passed to it; \cii{ATTR(double) || float} is \cii{double}. This is similar to the \texttt{attribute} type trait.
 
 Next, we'll look at some simple programs that parse using Boost.Parser. We'll start small and build up from there.
 
